<resources>
    <string name="app_name">ExamTen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="with_account_number">With Account number</string>
    <string name="with_pn">With PN</string>
    <string name="with_mobile_number">With mobile number</string>
    <string name="submit">Submit</string>
    <string name="valute_type">Valute type</string>
    <string name="account_number_xxxx">Account Number: XXXX</string>
</resources>