<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    tools:context=".presentation.fragments.ToAccountBottomSheetFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWithAccNum"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/with_account_number"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/btnWithPN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWithPN"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/with_pn"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/btnWithMobileNum"
        app:layout_constraintStart_toEndOf="@id/btnWithAccNum"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWithMobileNum"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/with_mobile_number"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnWithPN"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginTop="20dp"
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="INPUT"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnWithPN" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInput" />

    <ProgressBar
        android:id="@+id/pbValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit"/>


</androidx.constraintlayout.widget.ConstraintLayout>