<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".presentation.fragments.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/from"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/fromAccountContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/arch"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tvFrom">

        <TextView
            android:id="@+id/fromAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Account"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/fromAccountBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Balance: $0.00"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/fromAccountNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account Number: XXXX"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/to"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromAccountContainer" />


    <LinearLayout
        android:id="@+id/toAccountContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/arch"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTo">

        <TextView
            android:id="@+id/toValuteType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valute_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <TextView
            android:id="@+id/toAccountNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number_xxxx"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etBuy"
        android:layout_width="100dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toAccountContainer"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSell"
        android:layout_width="100dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/etBuy"
        app:layout_constraintTop_toBottomOf="@id/toAccountContainer" />

    <ProgressBar
        android:id="@+id/pbCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>